src/testData/analysis/integerLiterals/binIntegers.cr
0b1111111_i8

<error descr="The value is out of Int8 range">0b10000000_i8</error>

-0b10000000_i8

<error descr="The value is out of Int8 range">-0b10101010_i8</error>

0b11111111_u8

<error descr="The value is out of UInt8 range">0b100000000_u8</error>

<error descr="The value is out of UInt8 range">-0b1_u8</error>

0b111111111111111_i16

<error descr="The value is out of Int16 range">0b1000000000000000_i16</error>

-0b1000000000000000_i16

<error descr="The value is out of Int16 range">-0b1010101010101010_i16</error>

0b1111111111111111_u16

<error descr="The value is out of UInt16 range">0b10000000000000000_u16</error>

<error descr="The value is out of UInt16 range">-0b1_u16</error>

0b1111111111111111111111111111111_i32

<error descr="The value is out of Int32 range">0b10000000000000000000000000000000_i32</error>

-0b10000000000000000000000000000000_i32

<error descr="The value is out of Int32 range">-0b10101010101010101010101010101010_i32</error>

0b11111111111111111111111111111111_u32

<error descr="The value is out of UInt32 range">0b100000000000000000000000000000000_u32</error>

<error descr="The value is out of UInt32 range">-0b1_u32</error>

0b111111111111111111111111111111111111111111111111111111111111111_i64

<error descr="The value is out of Int64 range">0b1000000000000000000000000000000000000000000000000000000000000000_i64</error>

-0b1000000000000000000000000000000000000000000000000000000000000000_i64

<error descr="The value is out of Int64 range">-0b1010101010101010101010101010101010101010101010101010101010101010_i64</error>

0b1111111111111111111111111111111111111111111111111111111111111111_u64

<error descr="The value is out of UInt64 range">0b10000000000000000000000000000000000000000000000000000000000000000_u64</error>

<error descr="The value is out of UInt64 range">-0b0_u64</error>

<error descr="The value is out of UInt64 range">-0b0u64</error>

<error descr="The value is out of UInt64 range">-0b1_u64</error>

0b111111111111111111111111111111111111111111111111111111111111111_i128

<error descr="The value is out of Int64 range. Int128 literals that don't fit in an Int64 are currently not supported">0b1000000000000000000000000000000000000000000000000000000000000000_i128</error>

-0b1000000000000000000000000000000000000000000000000000000000000000_i128

<error descr="The value is out of Int64 range. Int128 literals that don't fit in an Int64 are currently not supported">-0b1010101010101010101010101010101010101010101010101010101010101010_i128</error>

0b1111111111111111111111111111111111111111111111111111111111111111_u128

<error descr="The value is out of UInt64 range. UInt128 literals that don't fit in an UInt64 are currently not supported">0b10000000000000000000000000000000000000000000000000000000000000000_u128</error>

<error descr="The value is out of UInt64 range. UInt128 literals that don't fit in an UInt64 are currently not supported">-0b1_u128</error>